--- a/WebShopApp/Views/Product/Index.cshtml
+++ b/WebShopApp/Views/Product/Index.cshtml
@@ -73,7 +73,7 @@
 
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit</a>
 
-                    
+                    <a asp-action="Order" asp-route-id="@item.Id" class="btn btn-success">Order</a>
 
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-success">Details</a>
 
