--- a/WebShopApp/Views/Shared/_Layout.cshtml
+++ b/WebShopApp/Views/Shared/_Layout.cshtml
@@ -28,17 +28,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
                         </li>
+                        @if(this.User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area = "" asp-controller="Order" asp-action="MyOrders">My Orders</a>
+                            </li>
+                        }
                         @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
                         {
-                            <li class=" dropdown">
-                                <button class=" btn btn-secondary dropdown-toggle" type="button" id=" dropdownMenuButton1"
-                                data-bs-toggle= "dropdown" aria-expanded="false">
-                                Statistic Modul
+                            <li class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenueButton1"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                    StatisticModul
                                 </button>
 
-                                <ul class=" dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class=" dropdown-item" href="/Statistics/Clients">Clients</a></li>
-                                    <li><a class=" dropdown-item" href="/Statistics/Orders">Orders</a></li>
+                                <ul class="dropdown-menue" aria-labelledby="dropdownMenueButton1">
+                                    <li><a class="dropdown-item" href="/Statistics/Clients">Clients</a></li>
+                                    <li><a class="dropdown-item" href="/Order/Index">Orders</a></li>
                                 </ul>
                             </li>
                         }
@@ -52,8 +58,8 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
-    </div>
-
+    </div>  
+   
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - WebShopApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
